feat: add credentials and ownerid guards
